# soromi

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  soromi.space.json  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  relay-image.yml  release.yml  web-image.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  home.rs  lib.rs  main.rs
crates/daemon/src/accounts/: loader.rs  mod.rs  provider.rs  resolver.rs  store.rs
crates/daemon/src/files/: directory.rs  mod.rs  paths.rs  reader.rs  watcher.rs
crates/daemon/src/hooks/: bridge.rs  listen.rs  mod.rs
crates/daemon/src/keep_awake/: backend.rs  controller.rs  mod.rs
crates/daemon/src/notifications/: controller.rs  mod.rs  notifier.rs
crates/daemon/src/pairing/: device.rs  mod.rs  service.rs
crates/daemon/src/providers/: mod.rs  usage.rs
crates/daemon/src/providers/claude/: hooks.rs  mod.rs  usage.rs
crates/daemon/src/providers/codex/: hooks.rs  mod.rs  usage.rs
crates/daemon/src/providers/grok/: hooks.rs  mod.rs
crates/daemon/src/sessions/: decoder.rs  manager.rs  mod.rs  scrollback.rs  session.rs
crates/daemon/src/skills/: mod.rs
crates/daemon/src/sound/: player.rs
crates/daemon/src/status/: parser.rs  state.rs
crates/daemon/src/transport/: codec.rs  connection.rs  mod.rs  relay.rs  server.rs
crates/daemon/src/updates/: mod.rs
crates/daemon/src/workspaces/: agent_command.rs  config.rs  mod.rs  service.rs  space_store.rs  workspace_loader.rs
crates/daemon/tests/: end_to_end.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: account.rs  lib.rs  messages.rs  status.rs
crates/protocol/tests/: wire.rs
docs/: index.html  styles.css
scripts/: fix-node-pty.mjs  release.sh
