[package]
name = "soromi-daemon"
version = "0.0.3"
edition = "2024"
publish = false

[dependencies]
soromi-protocol = { path = "../protocol" }
regex = "1"
portable-pty = "0.8"
tokio = { version = "1", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "net",
    "io-util",
    "signal",
] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ignore = "0.4"
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
notify-debouncer-mini = "0.4"
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
