[package]
name = "soromi-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
soromi-daemon = { path = "../../../crates/daemon" }
soromi-protocol = { path = "../../../crates/protocol" }
