[package]
name = "soromi-desktop"
version = "0.0.1"
edition = "2024"
publish = false

# The produced binary is `soromi`, so the dev process / macOS menu-bar name reads "soromi"
# instead of the crate name.
[[bin]]
name = "soromi"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
soromi-daemon = { path = "../../../crates/daemon" }
soromi-protocol = { path = "../../../crates/protocol" }
